Controller for document comparison