@@ -1,9 +1,11 @@
 package edu.example.docxversioncontrol.controllers;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
 
 import edu.example.docxversioncontrol.files.storage.StorageFileNotFoundException;
+import edu.example.docxversioncontrol.files.storage.StorageProperties;
 import edu.example.docxversioncontrol.files.storage.StorageService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
@@ -25,20 +27,34 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 public class FileUploadController {
 
     private final StorageService storageService;
+    private final String splitter;
 
     @Autowired
-    public FileUploadController(StorageService storageService) {
+    public FileUploadController(StorageService storageService, StorageProperties storageProperties) {
         this.storageService = storageService;
+        this.splitter = storageProperties.getFileNamesSplitter();
     }
 
     @GetMapping("/")
     public String listUploadedFiles(Model model) throws IOException {
-
-        model.addAttribute("files", storageService.loadAll().map(
-                        path -> MvcUriComponentsBuilder.fromMethodName(FileUploadController.class,
-                                "serveFile", path.getFileName().toString()).build().toUri().toString())
-                .collect(Collectors.toList()));
-
+        //получаем список файлов
+        List<String> filenames = storageService.loadAll().map(
+                        path -> path.getFileName().toString()).toList();
+        //делаем список ссылок
+        List<String> filesLinkslist = filenames.stream().map(
+                        filename -> MvcUriComponentsBuilder.fromMethodName(FileUploadController.class,
+                                "serveFile", filename).build().toUri().toString())
+                .toList();
+        //добавляем список для отображения в виде ссылок
+        model.addAttribute("files", filesLinkslist);
+        //добавляем пары для выбора к сравнению
+        List<String> pairs = new ArrayList<>();
+        if(filenames.size() > 1){//если есть хотя бы одна пара для сравнения
+            for(int i = 0; i < filenames.size() - 1; i++){//-1, потому что последний уже не с кем сравнивать
+                pairs.add(filenames.get(i) + splitter + filenames.get(i + 1));
+            }
+        }
+        model.addAttribute("pairs", pairs);
         return "uploadForm";
     }
 
